<resources>
    <string name="app_name">Joueur du grenier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Paramètres</string>
    <string name="channel_jdg">Youtube Joueur du grenier</string>
    <string name="channel_bazar">Youtube Bazar du grenier</string>
    <string name="news">News</string>
    <string name="app_desc">Fan App Joueur du grenier</string>
    <string name="app_url">merilonstudio.github.io</string>
    <string name="failed">Erreur dans le chargement de la vidéo</string>
    <string name="loading">Veuillez patienter svp…</string>
    <string name="interstitial">ca-app-pub-9605677164645933/6652860617</string>
    <string name="banner">ca-app-pub-9605677164645933/9087452265</string>
    <string name="offline">Vous devez disposer d\'une connexion internet pour utiliser cette application.</string>
    <string name="dateStored">com.merilonstudio.videosjoueurdugrenier.datestored</string>
    <string name="new_videos">notifications_new_videos</string>
    <string name="notifJDG">com.merilonstudio.videosjoueurdugrenier.notifjdg</string>
    <string name="notifBazar">com.merilonstudio.videosjoueurdugrenier.notifbazar</string>

    <string name="last_videos">Dernières vidéos</string>
    <string name="all_videos">Toutes les vidéos</string>
    <string name="papy">Papy Grenier</string>
    <string name="hs_videos">Hors Séries</string>
    <string name="aventures">Aventures</string>
    <string name="play">Let\'s Play !</string>
    <string name="hs_keyword">Spécial|hors|Hors</string>
    <string name="papy_keyword">Papy|papy</string>
    <string name="aventures_keyword">aventures|starventures|survivants</string>
    <string name="play_keyword">play|lp|let|découverte</string>

    <string name="api_key">AIzaSyCPT3DO51yUycDF3geQBiiMJpsEuqJx4PA</string>
    <string name="api_key2">AIzaSyDsn0NM-sTvi4dE5FvO4rAnLIgrB1aENL4</string>
    <string name="api_android_key">AIzaSyD4nrzFgdDFw4FtnkFLUjhe7kw3UDouEcI</string>
    <string name="api_android_key2">AIzaSyCJMaC4i9xAomsWyMXDrU18gsyl0jN2HXY</string>
    <string name="channel_jdg_id">UC_yP2DpIgs5Y1uWC0T03Chw</string>
    <string name="channel_bazar_id">UCCMxHHciWRBBouzk-PGzmtQ</string>
    <string name="title_activity_player">Lecteur Youtube</string>
    <string name="title_activity_bazar">Bazar du grenier</string>
    <string name="feed">http://www.joueurdugrenier.fr/feed/</string>

    <string name="hello">Hello, </string>
    <string name="login_instructions">Se connecter à Twitter</string>
    <string name="btn_login">Se connecter à Twitter</string>
    <string name="search">Rechercher une vidéo</string>
    <string name="views">%1$s vues</string>

    <!-- Menu drawer -->
    <string name="fb_jdg">Facebook JDG</string>
    <string name="fb_jdg_url">https://www.facebook.com/Joueur-du-Grenier-133349966719915</string>
    <string name="fb_aventures">Facebook Aventures</string>
    <string name="fb_aventures_url">https://www.facebook.com/aventuresJDR</string>
    <string name="twitter_jdg">Twitter JDG</string>
    <string name="site_jdg">Site web JDG</string>
    <string name="site_jdg_url">http://www.joueurdugrenier.fr/</string>
    <string name="site_aventures">Site web Aventures</string>
    <string name="site_aventures_url">http://www.reussitecritique.fr/aventures/</string>
    <string name="internet_title">Internet</string>
    <string name="social_title">Réseaux sociaux</string>
    <string name="application">Application</string>
    <string name="rate_app">Noter cette application</string>
    <string name="dev_page">Notre page développeur</string>
    <string name="dev_url">https://play.google.com/store/apps/dev?id=5564318794958031946</string>
    <string name="store_url">https://play.google.com/store/apps/details?id=com.merilonstudio.videosjoueurdugrenier</string>
    <string name="video_count">%1$s vidéos mises en ligne</string>
    <string name="view_count">%1$s vues</string>
    <string name="subs_count">%1$s abonnés</string>
    <string name="followers_count">%1$s followers</string>

    <!-- Twitter Configurations -->
    <string name="twitter_jdg_id">frederic_molas</string>
    <string name="twitter_callback">https://merilon.github.io</string>
    <string name="twitter_consumer_key">AKMOt4FJn3fPRwbsFL6L52X0j</string>
    <string name="twitter_consumer_secret">KXUMBOQyDjL2iQaHPIYvnEG2nx25PjZPtGJBjaSyw7vFGeFhOf</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="title_activity_news">News JDG</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Nouvelles vidéos</string>
    <string name="pref_jdg">Joueur du grenier</string>
    <string name="pref_bazar">Bazar du grenier</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
</resources>
