<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/new_videos"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="@string/new_videos"
        android:key="@string/notifJDG"
        android:summaryOn="@string/yes"
        android:summaryOff="@string/no"
        android:title="@string/pref_jdg" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="@string/new_videos"
        android:key="@string/notifBazar"
        android:summaryOn="@string/yes"
        android:summaryOff="@string/no"
        android:title="@string/pref_bazar" />

</PreferenceScreen>
