<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        id="@+id/tab_first"
        icon="@drawable/ic_restore_black_24dp"
        title="@string/last_videos"
        inActiveColor="@color/black"
        activeColor="@color/green_darken4"
        barColorWhenSelected="@color/yellow_darken2"/>
    <tab
        id="@+id/tab_second"
        icon="@drawable/ic_video_label_black_24dp"
        title="@string/papy"
        inActiveColor="@color/black"
        activeColor="@color/green_darken4"
        barColorWhenSelected="@color/yellow_darken2"/>
    <tab
        id="@+id/tab_third"
        icon="@drawable/ic_video_label_black_24dp"
        title="@string/hs_videos"
        inActiveColor="@color/black"
        activeColor="@color/green_darken4"
        barColorWhenSelected="@color/yellow_darken2"/>
</tabs>